--- a/demo/demo/pom.xml
+++ b/demo/demo/pom.xml
@@ -40,6 +40,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20240303</version> <!-- Latest version as of April 2024 -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
